tests/baselines/reference/contextualTypingOfConditionalExpression2.errors.txt
tests/cases/compiler/contextualTypingOfConditionalExpression2.ts(11,5): error TS2323: Type '((a: C) => number) | ((b: number) => void)' is not assignable to type '(a: A) => void'.
  Type '(b: number) => void' is not assignable to type '(a: A) => void'.
    Types of parameters 'b' and 'a' are incompatible.
      Type 'number' is not assignable to type 'A'.
        Property 'foo' is missing in type 'Number'.


==== tests/cases/compiler/contextualTypingOfConditionalExpression2.ts (1 errors) ====
    class A {
        foo: number;
    }
    class B extends A {
        bar: number;
    }
    class C extends A {
        baz: number;
    }
    
    var x2: (a: A) => void = true ? (a: C) => a.foo : (b: number) => { };
        ~~
!!! error TS2323: Type '((a: C) => number) | ((b: number) => void)' is not assignable to type '(a: A) => void'.
!!! error TS2323:   Type '(b: number) => void' is not assignable to type '(a: A) => void'.
!!! error TS2323:     Types of parameters 'b' and 'a' are incompatible.
!!! error TS2323:       Type 'number' is not assignable to type 'A'.
!!! error TS2323:         Property 'foo' is missing in type 'Number'.
    